--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -76,7 +76,7 @@ layout: page
 
 
 <!-- Starting squad -->
-<div class="column" >
+<div class="column team-page-squad" >
     {% include squad.html squad=page.team.players.starting %}
 </div>
 
