--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -3,7 +3,7 @@ layout: page
 ---
 
 <h1>
-    <img width="20%" src='{{site.baseurl}}/assets/img/{{page.team.logo}}'/>
+    <img width="20%" class="team-page-logo" src='{{site.baseurl}}/assets/img/{{page.team.logo}}'/>
     {{ page.team.display_name }}
 </h1>
 
