--- a/_includes/game_lines.html
+++ b/_includes/game_lines.html
@@ -1,16 +1,19 @@
 <a href="{{include.season_base_url}}games/{{include.game_key}}">
-<font color="#aaa">{{include.game.date}}</font>
-<font color="#aaa">{% translate {{include.game.type | prepend: "games."}} %}</font>
-  {{ include.game.home.display_name }}
-  <img class="team-logo" src='{{site.baseurl}}/assets/img/{{ include.game.home.logo }}'/>
-  {% if include.game.schedule %}
-  &nbsp;VS&nbsp;
-  {% else %}
-  {{include.game.home.score}}
-  :
-  {{ include.game.away.score }}
+  <font color="#aaa">{{include.game.date}}</font>
+  <font color="#aaa">{% translate {{include.game.type | prepend: "games."}} %}</font>
+  {% if include.game.extra != nil %}
+  <font color="#aaa">{{include.game.extra}}</font>
   {% endif %}
-  <img class="team-logo" src='{{site.baseurl}}/assets/img/{{ include.game.away.logo }}'/>
-  {{include.game.away.display_name}}
-</a>
-<br/>
+    {{ include.game.home.display_name }}
+    <img class="team-logo" src='{{site.baseurl}}/assets/img/{{ include.game.home.logo }}'/>
+    {% if include.game.schedule %}
+    &nbsp;VS&nbsp;
+    {% else %}
+    {{include.game.home.score}}
+    :
+    {{ include.game.away.score }}
+    {% endif %}
+    <img class="team-logo" src='{{site.baseurl}}/assets/img/{{ include.game.away.logo }}'/>
+    {{include.game.away.display_name}}
+  </a>
+  <br/>
