--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -7,11 +7,15 @@ layout: default
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
+  {%- if page.tag -%}
+    <h2 class="page-heading">{{ page.tag }}</h2>
+  {%- endif -%}
+
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
     <ul class="post-list">
-      {%- for post in site.posts -%}
+      {%- for post in page.posts -%}
       <li>
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         <span class="post-meta">
